initial commit init first try

--- a/start-client/src/styles/_variables.scss
+++ b/start-client/src/styles/_variables.scss
@@ -11,7 +11,7 @@ $light-color-dark: #494c4e;
 $light-border: #e4e4e4;
 $light-border-dark: darken($light-border, 10);
 $light-outline: rgba(0, 0, 0, 0.2);
-$light-primary: #6db33f;
+$light-primary: #f06000;
 $light-link: #0188ff;
 
 // Theme Dark
