--- a/start-site/src/main/resources/templates/starter/src/main/java/controller/EchoResource.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/controller/EchoResource.java.mustache
@@ -1,11 +1,14 @@
-package {{packageName}}.rest;
+package {{packageName}}.controller;
 
 {{#useSwagger2}}
+import {{packageName}}.configuration.SwaggerConfig;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
 import io.swagger.annotations.ApiResponse;
 import io.swagger.annotations.ApiResponses;
+import io.swagger.annotations.Authorization;
+import io.swagger.annotations.AuthorizationScope;
 {{/useSwagger2}}
 {{#useLogging}}
 import lombok.extern.slf4j.Slf4j;
@@ -13,6 +16,9 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+{{#useSecurity}}
+import org.springframework.security.access.annotation.Secured;
+{{/useSecurity}}
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -37,6 +43,15 @@ public class EchoResource {
 {{#useSwagger2}}
     @ApiOperation(
             value = "Echo",
+            authorizations = {
+                    @Authorization(value = SwaggerConfig.securitySchemaOAuth2,
+                            scopes = {
+                                    @AuthorizationScope(
+                                            scope = SwaggerConfig.authorizationScopeGlobal,
+                                            description = SwaggerConfig.authorizationScopeGlobalDesc)
+                            }
+                    )
+            },
             notes = "Just prints back \"ok\"",
             response = String.class)
     @ApiResponses({
@@ -44,6 +59,9 @@ public class EchoResource {
             @ApiResponse(code = 500, message = "Server error")
     })
 {{/useSwagger2}}
+{{#useSecurity}}
+    @Secured("ROLE_OAUTH2")
+{{/useSecurity}}
     public ResponseEntity<String> getEcho() {
 {{#useLogging}}
         log.debug("Got into the getEcho()");
@@ -56,6 +74,15 @@ public class EchoResource {
 {{#useSwagger2}}
     @ApiOperation(
             value = "Echo",
+            authorizations = {
+                    @Authorization(value = SwaggerConfig.securitySchemaOAuth2,
+                            scopes = {
+                                    @AuthorizationScope(
+                                            scope = SwaggerConfig.authorizationScopeGlobal,
+                                            description = SwaggerConfig.authorizationScopeGlobalDesc)
+                            }
+                    )
+            },
             notes = "Print back request string",
             response = String.class)
     @ApiResponses({
@@ -63,6 +90,9 @@ public class EchoResource {
             @ApiResponse(code = 500, message = "Server error")
     })
 {{/useSwagger2}}
+{{#useSecurity}}
+    @Secured("ROLE_OAUTH2")
+{{/useSecurity}}
     public ResponseEntity<String> putEcho({{#useSwagger2}}@ApiParam{{/useSwagger2}} @RequestBody String payload) {
 {{#useLogging}}
         log.debug("Got into the putEcho()");
