--- a/start-site/src/main/resources/templates/starter/src/main/java/configuration/SwaggerConfig.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/configuration/SwaggerConfig.java.mustache
@@ -1,9 +1,11 @@
 package {{packageName}}.configuration;
 
+import com.google.common.collect.Sets;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import springfox.documentation.builders.ApiInfoBuilder;
+import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.service.ApiInfo;
 import springfox.documentation.service.AuthorizationScope;
 import springfox.documentation.service.GrantType;
@@ -19,6 +21,9 @@ import springfox.documentation.swagger2.annotations.EnableSwagger2;
 import java.util.Collections;
 import java.util.List;
 
+import static {{packageName}}.configuration.ApplicationConfig.API_VERSION_0;
+import static {{packageName}}.configuration.ApplicationConfig.API_VERSION_1;
+import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 import static springfox.documentation.builders.PathSelectors.regex;
 
 @Configuration
@@ -33,21 +38,33 @@ public class SwaggerConfig {
     private String apiName;
     @Value("${swagger.api.description:Java API Starter Kit}")
     private String apiDescription;
-    @Value("${swagger.api.entry.point:/rest/.*}")
-    private String apiEntryPoint;
     @Value("${oauth2.login.entry.point:https://www-dev.realpage.com/login/identity/connect/authorize}")
     private String loginEntryPoint;
 
     @Bean
-    public Docket profileApi() {
+    public Docket restApiApi0() {
         return new Docket(DocumentationType.SWAGGER_2)
-                .apiInfo(apiInfo())
+                .groupName("restapi-v0")
+                .apiInfo(apiInfo0())
                 .select()
-                .paths(regex(apiEntryPoint.contains(".*") ? apiEntryPoint : apiEntryPoint + ".*"))
+                .paths(PathSelectors.ant(API_VERSION_0 + "**"))
                 .build()
                 .securitySchemes(Collections.singletonList(securitySchema()))
                 .securityContexts(Collections.singletonList(securityContext()));
+    }
 
+    @Bean
+    public Docket restApiApi1() {
+        return new Docket(DocumentationType.SWAGGER_2)
+                .groupName("restapi-v1")
+                .apiInfo(apiInfo1())
+                .select()
+                .paths(PathSelectors.ant(API_VERSION_1 + "**"))
+                .build()
+                .produces(Sets.newHashSet(APPLICATION_JSON_VALUE))
+                .consumes(Sets.newHashSet(APPLICATION_JSON_VALUE))
+                .securitySchemes(Collections.singletonList(securitySchema()))
+                .securityContexts(Collections.singletonList(securityContext()));
     }
 
     private OAuth securitySchema() {
@@ -61,17 +78,28 @@ public class SwaggerConfig {
     private SecurityContext securityContext() {
         return SecurityContext.builder()
                 .securityReferences(defaultAuth())
+                .forPaths(PathSelectors.regex("/((?!\\/public\\/).)*"))
                 .build();
     }
 
     private List<SecurityReference> defaultAuth() {
-        List<AuthorizationScope> authorizationScope = Collections.singletonList(new AuthorizationScope(authorizationScopeGlobal, authorizationScopeGlobalDesc));
-        AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
-        authorizationScopes[0] = authorizationScope.get(0);
-        return Collections.singletonList(new SecurityReference(securitySchemaOAuth2, authorizationScopes));
+        return Collections.singletonList(
+                new SecurityReference(
+                        securitySchemaOAuth2, new AuthorizationScope[]{
+                        new AuthorizationScope(authorizationScopeGlobal, authorizationScopeGlobalDesc)
+                })
+        );
     }
 
-    private ApiInfo apiInfo() {
+    private ApiInfo apiInfo0() {
+        return new ApiInfoBuilder()
+                .title(apiName)
+                .description(apiDescription)
+                .version("0.0")
+                .build();
+    }
+
+    private ApiInfo apiInfo1() {
         return new ApiInfoBuilder()
                 .title(apiName)
                 .description(apiDescription)
