--- a/start-site/src/main/resources/templates/starter/src/main/java/api/dao/domain/DAOVisitor.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/api/dao/domain/DAOVisitor.java.mustache
@@ -1,6 +1,6 @@
 package {{packageName}}.api.dao.domain;
 
-import {{packageName}}.api.dao.Company;
+import {{packageName}}.api.dao.data.Company;
 
 /**
  * Any convertible object should be listed here as void visit(Object object) method.
