--- a/start-site/src/main/resources/templates/starter/src/main/java/configuration/SecurityConfig.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/configuration/SecurityConfig.java.mustache
@@ -1,7 +1,7 @@
 package {{packageName}}.configuration;
 
-import com.realpage.template4.security.JwtConfigurer;
-import com.realpage.template4.security.JwtTokenProvider;
+import {{packageName}}.security.JwtConfigurer;
+import {{packageName}}.security.JwtTokenProvider;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Bean;
