--- a/start-site/src/main/resources/templates/starter/src/main/java/api/controller/external/EchoResource.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/api/controller/external/EchoResource.java.mustache
@@ -1,6 +1,5 @@
 package {{packageName}}.controller.external;
 
-{{#useSwagger2}}
 import {{packageName}}.configuration.SwaggerConfig;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
@@ -9,38 +8,28 @@ import io.swagger.annotations.ApiResponse;
 import io.swagger.annotations.ApiResponses;
 import io.swagger.annotations.Authorization;
 import io.swagger.annotations.AuthorizationScope;
-{{/useSwagger2}}
-{{#useLogging}}
 import lombok.extern.slf4j.Slf4j;
-{{/useLogging}}
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-{{#useSecurity}}
 import org.springframework.security.access.annotation.Secured;
-{{/useSecurity}}
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-{{#useLogging}}
 @Slf4j
-{{/useLogging}}
 @RestController
 @RequestMapping(
         value = "/rest/v0/public/echo")
-{{#useSwagger2}}
 @Api(
         value = "/rest/v0/public/echo",
         description = "Java SpringBoot Kick Starter API - echo resource")
-{{/useSwagger2}}
 public class EchoResource {
 
     @GetMapping(
             produces = MediaType.TEXT_PLAIN_VALUE)
-{{#useSwagger2}}
     @ApiOperation(
             value = "Echo",
             notes = "Just prints back \"ok\"",
@@ -49,17 +38,13 @@ public class EchoResource {
             @ApiResponse(code = 200, message = "Request success"),
             @ApiResponse(code = 500, message = "Server error")
     })
-{{/useSwagger2}}
     public ResponseEntity<String> getEcho() {
-{{#useLogging}}
         log.debug("Got into the getEcho()");
-{{/useLogging}}
         return new ResponseEntity<>("ok", HttpStatus.OK);
     }
 
     @PutMapping(
             produces = MediaType.TEXT_PLAIN_VALUE)
-{{#useSwagger2}}
     @ApiOperation(
             value = "Echo",
             authorizations = {
@@ -77,14 +62,9 @@ public class EchoResource {
             @ApiResponse(code = 200, message = "Request success"),
             @ApiResponse(code = 500, message = "Server error")
     })
-{{/useSwagger2}}
-{{#useSecurity}}
     @Secured("ROLE_OAUTH2")
-{{/useSecurity}}
-    public ResponseEntity<String> putEcho({{#useSwagger2}}@ApiParam{{/useSwagger2}} @RequestBody String payload) {
-{{#useLogging}}
+    public ResponseEntity<String> putEcho(@ApiParam @RequestBody String payload) {
         log.debug("Got into the putEcho()");
-{{/useLogging}}
         return new ResponseEntity<>(payload, HttpStatus.OK);
     }
 }
