--- a/start-site/src/main/resources/templates/starter/src/main/java/api/dao/impl/CompanyDaoImpl.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/api/dao/impl/CompanyDaoImpl.java.mustache
@@ -4,6 +4,8 @@ import {{packageName}}.api.dao.CompanyDao;
 import {{packageName}}.api.dao.data.Company;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Primary;
+import org.springframework.context.annotation.Scope;
+import org.springframework.context.annotation.ScopedProxyMode;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.stereotype.Repository;
@@ -17,7 +19,7 @@ import java.util.UUID;
 @Primary
 @Repository
 @Transactional
-@ConditionalOnProperty(value = "spring.datasource.enabled", matchIfMissing = true)
+@ConditionalOnProperty(value = "use-datasource", matchIfMissing = true)
 @Scope(proxyMode = ScopedProxyMode.TARGET_CLASS)
 public class CompanyDaoImpl implements CompanyDao {
     private final JdbcTemplate jdbc;
