--- a/start-site/src/main/resources/templates/starter/src/main/java/configuration/DataSourceConfig.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/configuration/DataSourceConfig.java.mustache
@@ -4,12 +4,31 @@ import liquibase.integration.spring.SpringLiquibase;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.jdbc.datasource.DataSourceTransactionManager;
+import org.springframework.transaction.PlatformTransactionManager;
+import org.springframework.transaction.annotation.EnableTransactionManagement;
+
+import javax.sql.DataSource;
 
 @Configuration
+@EnableTransactionManagement
 public class DataSourceConfig {
 
     @Bean
-    @ConditionalOnProperty(value = "spring.datasource.enabled", havingValue = "false")
+    @ConditionalOnProperty(value = "use-datasource", matchIfMissing = true)
+    public JdbcTemplate jdbcTemplate(DataSource dataSource) {
+        return new JdbcTemplate(dataSource);
+    }
+
+    @Bean
+    @ConditionalOnProperty(value = "use-datasource", matchIfMissing = true)
+    public PlatformTransactionManager transactionManager(DataSource dataSource) {
+        return new DataSourceTransactionManager(dataSource);
+    }
+
+    @Bean
+    @ConditionalOnProperty(value = "use-datasource", havingValue = "false")
     public SpringLiquibase liquibase() {
         SpringLiquibase liquibase = new SpringLiquibase();
         liquibase.setShouldRun(false);
