(feat) logging improvement
add context to log messages

--- a/start-site/src/main/resources/templates/starter/src/main/java/HomeController.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/HomeController.java.mustache
@@ -8,7 +8,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 @Controller
 public class HomeController {
 
-	@Value("${oauth2.redirect.url:-}")
+	@Value("${oauth2.redirect-url:-}")
 	private String oauth2RedirectUrl;
 
 	@GetMapping(path = "/", produces = MediaType.TEXT_HTML_VALUE)
