--- a/start-site/src/main/resources/templates/starter/src/main/java/configuration/SwaggerConfig.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/configuration/SwaggerConfig.java.mustache
@@ -38,7 +38,7 @@ public class SwaggerConfig {
     private String apiName;
     @Value("${swagger.api.description:Java API Starter Kit}")
     private String apiDescription;
-    @Value("${oauth2.login.entry.point:https://www-dev.realpage.com/login/identity/connect/authorize}")
+    @Value("${oauth2.login-entry-point:https://www-dev.realpage.com/login/identity/connect/authorize}")
     private String loginEntryPoint;
 
     @Bean
