--- a/start-site/src/main/resources/templates/starter/src/main/resources/logback-spring.xml.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/resources/logback-spring.xml.mustache
@@ -1,17 +1,14 @@
-<configuration>
-    <conversionRule conversionWord="clr" converterClass="org.springframework.boot.logging.logback.ColorConverter" />
-    <conversionRule conversionWord="wex" converterClass="org.springframework.boot.logging.logback.WhitespaceThrowableProxyConverter" />
-    <conversionRule conversionWord="wEx" converterClass="org.springframework.boot.logging.logback.ExtendedWhitespaceThrowableProxyConverter" />
-    <appender name="stdout" class="ch.qos.logback.core.ConsoleAppender">
-        <encoder>
-            <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} %5p 18737 --- [%t] %-40.40logger{39} : %m%n%wEx</pattern>
+<?xml version="1.0" encoding="UTF-8"?>
+<configuration scan="true" scanPeriod="60 seconds">
+    <appender name="console" class="ch.qos.logback.core.ConsoleAppender">
+        <encoder class="ch.qos.logback.classic.encoder.PatternLayoutEncoder">
+            <Pattern>%d{HH:mm:ss.SSS} %-5p [%t] app={{name}} {%X} %m [%c]%n</Pattern>
         </encoder>
     </appender>
 
-    <root level="WARN">
-        <appender-ref ref="stdout" />
-    </root>
-
     <logger name="{{packageName}}" level="DEBUG"/>
 
+    <root level="INFO">
+        <appender-ref ref="console"/>
+    </root>
 </configuration>
