--- a/start-site/src/main/resources/templates/starter/src/main/java/api/service/impl/CompanyServiceV1Impl.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/api/service/impl/CompanyServiceV1Impl.java.mustache
@@ -6,6 +6,8 @@ import {{packageName}}.api.controller.dto.CompanyDto;
 import {{packageName}}.api.dao.CompanyDao;
 import {{packageName}}.api.dao.data.Company;
 import {{packageName}}.api.service.CompanyService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Scope;
 import org.springframework.context.annotation.ScopedProxyMode;
 import org.springframework.stereotype.Service;
@@ -17,6 +19,7 @@ import java.util.UUID;
 @Service("companyServiceV1")
 @Scope(proxyMode = ScopedProxyMode.TARGET_CLASS)
 public class CompanyServiceV1Impl implements CompanyService {
+    private static final Logger logger = LoggerFactory.getLogger(CompanyServiceV1Impl.class);
     private final DAOConverter converter;
     private final CompanyDao companyDao;
 
@@ -26,6 +29,7 @@ public class CompanyServiceV1Impl implements CompanyService {
     }
     @Override
     public List<CompanyDto> getCompanyList() {
+        logger.debug("Got into getCompanyList()");
         return converter.convert(companyDao.getCompanies());
     }
 
