(feat) alternative template
Implement alternative template to support dynamic API generation by swagger specification

--- a/start-site/src/main/resources/templates/starter/src/main/java/api/controller/external/EchoResource.java.mustache
+++ b/start-site/src/main/resources/templates/starter/src/main/java/api/controller/external/EchoResource.java.mustache
@@ -1,4 +1,4 @@
-package {{packageName}}.controller.external;
+package {{packageName}}.api.controller.external;
 
 import {{packageName}}.configuration.SwaggerConfig;
 import io.swagger.annotations.Api;
